<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/opcione_txt"
        android:title="@string/app_opciones">
<menu>
    <item
        android:id="@+id/inicio_cliente"
        android:title="@string/inicio_cliente"
        android:icon="@drawable/ic_menu_inicio"/>
    <item
        android:id="@+id/pedidos_cliente"
        android:title="@string/pedidos_cliente"
        android:icon="@drawable/ic_menu_pedidos"/>
</menu>
    </item>
    <item
        android:id="@+id/mas_opcione_txt"
        android:title="@string/app_opciones">
        <menu>
            <item
                android:id="@+id/editar_perfil_cliente"
                android:title="@string/editar_perfil_cliente"
                android:icon="@drawable/ic_menu_editar_perfil"/>
            <item
                android:id="@+id/cerrar_sesion_cliente"
                android:title="@string/cerrar_sesion"
                android:icon="@drawable/ic_menu_cerrar_sesion"/>
        </menu>
    </item>



</menu>