<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/inicio_repartidor"
            android:title="@string/inicio_repartidor"
            android:icon="@drawable/ic_menu_inicio"/>
        <item
            android:id="@+id/elegir_rol_repartidor"
            android:title="@string/elegir_repartidor"
            android:icon="@drawable/ic_menu_selecionar_rol"/>
        <item
            android:id="@+id/cerrar_sesion_repartidor"
            android:title="@string/cerrar_sesion"
            android:icon="@drawable/ic_menu_cerrar_sesion"/>

    </group>
</menu>